--- a/src/demo/15.scss
+++ b/src/demo/15.scss
@@ -6,16 +6,16 @@ $bfg-card-primary-included: false;
 
 // ===== Add customized themes =====
 
-.demo-layout__output--light {
+.demo-layout__playground--light {
   @include bfg-card(primary, ());
 }
 
-.demo-layout__output--dark {
+.demo-layout__playground--dark {
   @include bfg-card(primary, (
-    header-border: #333,
-    header-background: #222,
+    header-border: #4a4a4a,
+    header-background: #3a3a3a,
 
-    content-border: #444,
-    content-background: #555,
+    content-border: #4a4a4a,
+    content-background: #2a2a2a,
   ));
 }
