--- a/src/demo/13.scss
+++ b/src/demo/13.scss
@@ -1,47 +1,21 @@
 // ===== Import grid system =====
 
+$bfg-card-primary-included: false;
+
 @import "../lib/bem-flex-grid.ie11";
 
 // ===== Add customized themes =====
 
-@include bfg-card(info, (
-  //box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075), // Omit to use default value
-  border-radius: 0,
-  border-width: 3px,
+.demo-layout__playground--light {
+  @include bfg-card(primary, ());
+}
 
-  header-border: #90CAF9,
-  header-background: #BBDEFB,
-  header-forground: #1E88E5,
+.demo-layout__playground--dark {
+  @include bfg-card(primary, (
+    header-border: #4a4a4a,
+    header-background: #3a3a3a,
 
-  content-border: #BBDEFB,
-  content-background: #E3F2FD,
-  //content-forground: false // Omit to use default value
-));
-
-@include bfg-card(warning, (
-  //box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075),
-  border-radius: 8px,
-  //border-width: 1px,
-
-  header-border: #FFCC80,
-  header-background: #FFE0B2,
-  //header-forground: false,
-
-  content-border: #FFE0B2,
-  content-background: #FFF3E0,
-  //content-forground: false
-));
-
-@include bfg-card(error, (
-  //box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075),
-  //border-radius: 3px,
-  border-width: 2px,
-
-  header-border: #B71C1C,
-  header-background: #C62828,
-  header-forground: #FFCDD2,
-
-  content-border: #E53935,
-  content-background: #F44336,
-  content-forground: #FFEBEE
-));
+    content-border: #4a4a4a,
+    content-background: #2a2a2a,
+  ));
+}
