--- a/src/demo/14.scss
+++ b/src/demo/14.scss
@@ -2,46 +2,19 @@
 
 @import "../lib/bem-flex-grid.ie11";
 
-// ===== Add customized themes =====
+// ===== Add customized theme =====
 
 @include bfg-card(info, (
   //box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075), // Omit to use default value
-  border-radius: 0,
-  border-width: 3px,
+  border-radius: 6px,
+  border-width: 2px,
 
-  header-border: #90CAF9,
-  header-background: #BBDEFB,
-  header-forground: #1E88E5,
+  header-borderless: true,
+  header-border: #BBDEFB,
+  header-background: #E3F2FD,
+  header-forground: #1976D2,
 
   content-border: #BBDEFB,
   content-background: #E3F2FD,
   //content-forground: false // Omit to use default value
-));
-
-@include bfg-card(warning, (
-  //box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075),
-  border-radius: 8px,
-  //border-width: 1px,
-
-  header-border: #FFCC80,
-  header-background: #FFE0B2,
-  //header-forground: false,
-
-  content-border: #FFE0B2,
-  content-background: #FFF3E0,
-  //content-forground: false
-));
-
-@include bfg-card(error, (
-  //box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075),
-  //border-radius: 3px,
-  border-width: 2px,
-
-  header-border: #B71C1C,
-  header-background: #C62828,
-  header-forground: #FFCDD2,
-
-  content-border: #E53935,
-  content-background: #F44336,
-  content-forground: #FFEBEE
 ));
