--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -72,6 +72,7 @@ main {
   padding: 1rem;
   flex-grow: 1;
   flex-shrink: 0;
+  background-color: #fff;
 
   h1 {
     margin-top: 0;
@@ -92,7 +93,7 @@ main {
   max-height: 100%;
   box-sizing: border-box;
   border-top: $docs-showcase-border;
-  background: #f6f8fa;
+  background-color: #f6f8fa;
   padding: 1rem;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.033) inset;
   overflow-x: auto;
