Add `--nowrap` modifier. Add `--wrap` and `--nowrap` at each breackpoint.

--- a/src/lib/_core.scss
+++ b/src/lib/_core.scss
@@ -44,10 +44,6 @@
   padding: 0;
 }
 
-.bfg--wrap {
-  flex-wrap: wrap;
-}
-
 // Justify content along the "main" axis
 .bfg--main-center   { justify-content: center;        }
 .bfg--main-end      { justify-content: flex-end;      }
@@ -86,6 +82,9 @@
 }
 
 @mixin bfg-boxes($size: '') {
+  .bfg--#{$size + wrap} { flex-wrap: wrap; }
+  .bfg--#{$size + nowrap} { flex-wrap: nowrap; }
+
   .bfg--row.bfg--#{$size + reverse} { flex-direction: row-reverse; }
   .bfg--col.bfg--#{$size + reverse} { flex-direction: column-reverse; }
 
