--- a/src/demo/14.scss
+++ b/src/demo/14.scss
@@ -1,20 +1,21 @@
 // ===== Import grid system =====
 
+$bfg-card-primary-included: false;
+
 @import "../lib/bem-flex-grid.ie11";
 
-// ===== Add customized theme =====
+// ===== Add customized themes =====
 
-@include bfg-card(info, (
-  //box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075), // Omit to use default value
-  border-radius: 6px,
-  border-width: 2px,
+.demo-layout__playground--light {
+  @include bfg-card(primary, ());
+}
 
-  header-borderless: true,
-  header-border: #BBDEFB,
-  header-background: #E3F2FD,
-  header-forground: #1976D2,
+.demo-layout__playground--dark {
+  @include bfg-card(primary, (
+    header-border: #4a4a4a,
+    header-background: #3a3a3a,
 
-  content-border: #BBDEFB,
-  content-background: #E3F2FD,
-  //content-forground: false // Omit to use default value
-));
+    content-border: #4a4a4a,
+    content-background: #2a2a2a,
+  ));
+}
