Add `-card` prefix for sass card variables

--- a/src/demo/17.scss
+++ b/src/demo/17.scss
@@ -2,11 +2,11 @@
 
 $bfg-gap: 1rem;
 
-$bfg-margin: 1.5rem;
+$bfg-card-margin: 1.5rem;
 
-$bfg-padding: 1rem;
+$bfg-card-padding: 1rem;
 
-$bfg-header-height: 2.5rem;
+$bfg-card-header-height: 2.5rem;
 
 $bfg-card-primary-included: false;
 
