--- a/src/lib/_variables.scss
+++ b/src/lib/_variables.scss
@@ -1,4 +1,4 @@
-$ie11-support: false !default;
+$bfg-ie11-support: false !default;
 
 $bfg-breakpoints: (
   xs: 576px,
@@ -9,11 +9,11 @@ $bfg-breakpoints: (
 
 $bfg-gap: 1rem !default;
 
-$bfg-margin: 1rem !default;
+$bfg-card-margin: 1rem !default;
 
-$bfg-padding: 0.5rem !default;
+$bfg-card-padding: 0.5rem !default;
 
-$bfg-header-height: 2rem !default;
+$bfg-card-header-height: 2rem !default;
 
 $bfg-card-primary: (
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075),
