Restore IE11 build

--- a/src/lib/_variables.scss
+++ b/src/lib/_variables.scss
@@ -1,3 +1,5 @@
+/*! bem-flex-grid | (c) Stephane Francel | github.com/avine/bem-flex-grid/blob/master/LICENSE */
+
 $bfg-ie11-support: false !default;
 
 $bfg-breakpoints: (
