--- a/src/lib/class/_core.scss
+++ b/src/lib/class/_core.scss
@@ -92,33 +92,15 @@
   .bfg__box--#{$size + in-place} { order: 0; }
   .bfg__box--#{$size + last} { order: 1; }
 
-  .bfg__box--#{$size + 1} { flex-basis: (100% / 12); }
-  .bfg__box--#{$size + 2} { flex-basis: (100% / 6); }
-  .bfg__box--#{$size + 3} { flex-basis: 25%; }
-  .bfg__box--#{$size + 4} { flex-basis: (100% / 3); }
-  .bfg__box--#{$size + 5} { flex-basis: (500% / 12); }
-  .bfg__box--#{$size + 6} { flex-basis: 50%; }
-  .bfg__box--#{$size + 7} { flex-basis: (700% / 12); }
-  .bfg__box--#{$size + 8} { flex-basis: (200% / 3); }
-  .bfg__box--#{$size + 9} { flex-basis: 75%; }
-  .bfg__box--#{$size + 10} { flex-basis: (1000% / 12); }
-  .bfg__box--#{$size + 11} { flex-basis: (1100% / 12); }
-  .bfg__box--#{$size + 12} { flex-basis: 100%; }
+  @for $i from 1 through 12 {
+    .bfg__box--#{$size + $i} { flex-basis: (100% * $i / 12); }
+  }
 
   .bfg--row {
     @if $bfg-ie11-support {
-      > .bfg__box--#{$size + 1} { max-width: (100% / 12); }
-      > .bfg__box--#{$size + 2} { max-width: (100% / 6); }
-      > .bfg__box--#{$size + 3} { max-width: 25%; }
-      > .bfg__box--#{$size + 4} { max-width: (100% / 3); }
-      > .bfg__box--#{$size + 5} { max-width: (500% / 12); }
-      > .bfg__box--#{$size + 6} { max-width: 50%; }
-      > .bfg__box--#{$size + 7} { max-width: (700% / 12); }
-      > .bfg__box--#{$size + 8} { max-width: (200% / 3); }
-      > .bfg__box--#{$size + 9} { max-width: 75%; }
-      > .bfg__box--#{$size + 10} { max-width: (1000% / 12); }
-      > .bfg__box--#{$size + 11} { max-width: (1100% / 12); }
-      > .bfg__box--#{$size + 12} { max-width: 100%; }
+      @for $i from 1 through 12 {
+        > .bfg__box--#{$size + $i} { max-width: (100% * $i / 12); }
+      }
     }
 
     &.bfg--#{$size + lines-2} > .bfg__box { height: 50%; }
@@ -128,18 +110,9 @@
 
   .bfg--col {
     @if $bfg-ie11-support {
-      > .bfg__box--#{$size + 1} { max-height: (100% / 12); }
-      > .bfg__box--#{$size + 2} { max-height: (100% / 6); }
-      > .bfg__box--#{$size + 3} { max-height: 25%; }
-      > .bfg__box--#{$size + 4} { max-height: (100% / 3); }
-      > .bfg__box--#{$size + 5} { max-height: (500% / 12); }
-      > .bfg__box--#{$size + 6} { max-height: 50%; }
-      > .bfg__box--#{$size + 7} { max-height: (700% / 12); }
-      > .bfg__box--#{$size + 8} { max-height: (200% / 3); }
-      > .bfg__box--#{$size + 9} { max-height: 75%; }
-      > .bfg__box--#{$size + 10} { max-height: (1000% / 12); }
-      > .bfg__box--#{$size + 11} { max-height: (1100% / 12); }
-      > .bfg__box--#{$size + 12} { max-height: 100%; }
+      @for $i from 1 through 12 {
+        > .bfg__box--#{$size + $i} { max-height: (100% * $i / 12); }
+      }
     }
 
     &.bfg--#{$size + lines-2} > .bfg__box { width: 50%; }
