Improve `bfg-card` mixin (and demo `14.html`)

--- a/src/lib/class/_mixins.scss
+++ b/src/lib/class/_mixins.scss
@@ -10,8 +10,8 @@
   }
 }
 
-@mixin bfg-card($name, $settings) {
-  $s: map-merge($bfg-card-primary, $settings);
+@mixin bfg-card($name, $settings: (), $defaults: ()) {
+  $s: map-merge($bfg-card-primary, map-merge($defaults, $settings));
 
   .bfg-card--#{$name} {
     .bfg-card__action,
