--- a/src/demo-class/14.scss
+++ b/src/demo-class/14.scss
@@ -7,15 +7,75 @@ $bfg-card-themes-included: false;
 // ===== Add customized themes =====
 
 .demo-layout__playground--light {
-  @include bfg-card(primary, ());
+  @include bfg-card(primary);
+
+  @include bfg-card(secondary, (
+    header-border: darken(#6c757d, 5),
+    header-background: #6c757d,
+    header-forground: #fff
+  ));
+
+  @include bfg-card(success, (
+    header-border: darken(#28a745, 5),
+    header-background: #28a745,
+    header-forground: #fff
+  ));
+
+  @include bfg-card(danger, (
+    header-border: darken(#dc3545, 5),
+    header-background: #dc3545,
+    header-forground: #fff
+  ));
+
+  @include bfg-card(info, (
+    header-border: darken(#17a2b8, 5),
+    header-background: #17a2b8,
+    header-forground: #fff
+  ));
+
+  @include bfg-card(warning, (
+    header-border: darken(#ffc107, 5),
+    header-background: #ffc107,
+    header-forground: #000,
+  ));
 }
 
 .demo-layout__playground--dark {
+  $bfg-card-dark-defaults: (
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2),
+    header-forground: #fff,
+    content-border: #4a4a4a,
+    content-background: #2a2a2a
+  );
+
   @include bfg-card(primary, (
     header-border: #4a4a4a,
-    header-background: #3a3a3a,
+    header-background: #3a3a3a
+  ), $bfg-card-dark-defaults);
 
-    content-border: #4a4a4a,
-    content-background: #2a2a2a,
-  ));
+  @include bfg-card(secondary, (
+    header-border: darken(#6c757d, 5),
+    header-background: #6c757d
+  ), $bfg-card-dark-defaults);
+
+  @include bfg-card(success, (
+    header-border: darken(#28a745, 5),
+    header-background: #28a745
+  ), $bfg-card-dark-defaults);
+
+  @include bfg-card(danger, (
+    header-border: darken(#dc3545, 5),
+    header-background: #dc3545
+  ), $bfg-card-dark-defaults);
+
+  @include bfg-card(info, (
+    header-border: darken(#17a2b8, 5),
+    header-background: #17a2b8
+  ), $bfg-card-dark-defaults);
+
+  @include bfg-card(warning, (
+    header-border: darken(#ffc107, 5),
+    header-background: #ffc107,
+    header-forground: #000,
+  ), $bfg-card-dark-defaults);
 }
