Renaming: `$bfg-card-theme-included` and improve README

--- a/src/lib/_variables.scss
+++ b/src/lib/_variables.scss
@@ -61,4 +61,4 @@ $bfg-card-warning: (
   header-background: #ffc107,
 ) !default;
 
-$bfg-card-themes-included: true !default;
+$bfg-card-theme-included: true !default;
