--- a/src/demo-attr/14.scss
+++ b/src/demo-attr/14.scss
@@ -1,6 +1,6 @@
 // ===== Import grid system =====
 
-$bfg-card-themes-included: false;
+$bfg-card-theme-included: false;
 
 @import "../lib/bem-flex-grid-attr";
 
