--- a/src/lib/class/_mixins.scss
+++ b/src/lib/class/_mixins.scss
@@ -10,10 +10,10 @@
   }
 }
 
-@mixin bfg-card($name, $settings: (), $defaults: ()) {
+@mixin bfg-card($type, $settings: (), $defaults: ()) {
   $s: map-merge($bfg-card-primary, map-merge($defaults, $settings));
 
-  .bfg-card--#{$name} {
+  .bfg-card--#{$type} {
     .bfg-card__action,
     .bfg-card__header {
       box-shadow: map-get($s, box-shadow);
