--- a/src/styles/demo.scss
+++ b/src/styles/demo.scss
@@ -312,7 +312,7 @@ $demo-toolbox-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
   flex-grow: 1;
   text-align: center;
   text-decoration: none;
-  transition: background-color ease-in-out ($demo-duration / 2), color ease-in-out ($demo-duration / 2);
+  transition: background-color ease-in-out ($demo-duration * 0.5), color ease-in-out ($demo-duration * 0.5);
 
   & + .demo-layout__tabs-nav-item {
     border-left: $docs-showcase-border;
