--- a/src/lib/bem-flex-grid-class.scss
+++ b/src/lib/bem-flex-grid-class.scss
@@ -1,5 +1,5 @@
-@import "./variables";
+@forward "./variables";
 
-@import "./class/mixins";
-@import "./class/core";
-@import "./class/card";
+@forward "./class/mixins";
+@forward "./class/core";
+@forward "./class/card";
