--- a/src/lib/bem-flex-grid-attr.ie11.scss
+++ b/src/lib/bem-flex-grid-attr.ie11.scss
@@ -1,7 +1,5 @@
-$bfg-ie11-support: true;
+@forward "./variables" with ($bfg-ie11-support: true);
 
-@import "./variables";
-
-@import "./attr/mixins";
-@import "./attr/core";
-@import "./attr/card";
+@forward "./attr/mixins";
+@forward "./attr/core";
+@forward "./attr/card";
