--- a/src/lib/_variables.scss
+++ b/src/lib/_variables.scss
@@ -7,7 +7,7 @@ $bfg-breakpoints: (
   xl: 1200px
 ) !default;
 
-$bfg-gap: 1.5rem !default;
+$bfg-half-gap: 0.75rem !default;
 
 $bfg-card-margin: 1.5rem !default;
 
@@ -15,10 +15,28 @@ $bfg-card-padding: 1rem !default;
 
 $bfg-card-header-height: 2.5rem !default;
 
+$bfg-card-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.05) !default;
+
+$bfg-card-border-radius: 3px !default;
+
+$bfg-card-border-width: 1px !default;
+
+:root {
+  --bfg-half-gap: #{$bfg-half-gap};
+
+  --bfg-card-margin: #{$bfg-card-margin};
+  --bfg-card-padding: #{$bfg-card-padding};
+  --bfg-card-header-height: #{$bfg-card-header-height};
+
+  --bfg-card-box-shadow: #{$bfg-card-box-shadow};
+  --bfg-card-border-radius: #{$bfg-card-border-radius};
+  --bfg-card-border-width: #{$bfg-card-border-width};
+}
+
 $bfg-card-primary: (
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.05),
-  border-radius: 3px,
-  border-width: 1px,
+  box-shadow: var(--bfg-card-box-shadow),
+  border-radius: var(--bfg-card-border-radius),
+  border-width: var(--bfg-card-border-width),
 
   header-borderless: false,
   header-border: #d5d5d5,
