--- a/src/lib/attr/_mixins.scss
+++ b/src/lib/attr/_mixins.scss
@@ -23,7 +23,7 @@
       @if map-get($s, header-borderless) { border-bottom-width: 0; }
       background: map-get($s, header-background);
       @if map-get($s, header-forground) { color: map-get($s, header-forground); }
-      line-height: calc(#{$bfg-card-header-height} - #{2 * map-get($s, border-width)});
+      line-height: calc(var(--bfg-card-header-height) - 2 * #{map-get($s, border-width)});
     }
 
     [bfg-card__action] {
